--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Jeen_2537_Assignment3</title>
 
-		<!-- import axios -->
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-		<!-- bootstrap imports -->
 		<script
 			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -33,7 +30,6 @@
 			crossorigin="anonymous"
 		/>
 
-		<!-- my files imports -->
 		<script src="index.js"></script>
 		<link rel="stylesheet" href="index.css" />
 	</head>
